fix(bootstrap4-theme): content sections alignment

--- a/packages/bootstrap4-theme/src/scss/extends/_card-arrangements.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_card-arrangements.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   max-width: 1400px;
+  margin: 0 12px;
 
   & > &-content-container {
     display: flex;
@@ -93,6 +94,7 @@
 
   @media screen and (max-width: $uds-breakpoint-sm) {
     flex-direction: column;
+    margin: 0 $uds-size-spacing-4;
     & > &-card-container {
       &.auto-arrangement {
         grid-template-columns: 1fr;
