--- a/packages/bootstrap4-theme/src/scss/extends/_image-overlap.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_image-overlap.scss
@@ -7,17 +7,17 @@
 --------------------------------------------------------------*/
 
 .uds-image-overlap {
-  position:relative;
-  padding-top:$uds-size-spacing-3;
+  position: relative;
+  padding-top: $uds-size-spacing-3;
 
   &:before {
-    content:'';
+    content: '';
     height: $uds-size-spacing-3;
-    width:calc(100% - #{$uds-size-spacing-8});
+    width: calc(100% - #{$uds-size-spacing-8});
     background-color: $uds-color-base-gold;
-    position:absolute;
-    left:$uds-size-spacing-4;
-    top:0;
+    position: absolute;
+    left: $uds-size-spacing-4;
+    top: 0;
   }
 
   .content-wrapper {
@@ -26,26 +26,28 @@
   }
 }
 
-
 /*------------------------------------------------------------------
 2. Desktop, large
 ------------------------------------------------------------------- */
 @include media-breakpoint-up(lg) {
-
   .uds-image-overlap {
+    margin: 0 12px;
 
     &:before {
-      display:none;
+      display: none;
     }
 
     display: grid;
     grid-template-columns: 1.5rem 1fr 10rem 1fr 10rem 1fr 1.5rem;
-    grid-template-rows: minmax(0, auto) minmax(0, 2rem) 1fr minmax(0, 2rem) minmax(0, auto);
+    grid-template-rows: minmax(0, auto) minmax(0, 2rem) 1fr minmax(0, 2rem) minmax(
+        0,
+        auto
+      );
     gap: 0px 0px;
 
     img {
-      width:100%;
-      height:auto;
+      width: 100%;
+      height: auto;
       grid-column: 2 / span 4;
       grid-row: 2 / 5;
     }
@@ -56,13 +58,12 @@
     }
 
     &:after {
-      content:'';
-      width:1.5rem;
+      content: '';
+      width: 1.5rem;
       background-color: $uds-color-base-gold;
       grid-column: 1 / 2;
       grid-row: 3 / span 1;
     }
-
   }
 
   .uds-image-overlap.content-left {
@@ -83,17 +84,18 @@
   }
 }
 
-
 /*------------------------------------------------------------------
 2. Desktop, XL
 --------------------------------------------------------------------*/
 @include media-breakpoint-up(xl) {
-
   .uds-image-overlap {
-    grid-template-rows: minmax(0, auto) minmax(0, $uds-size-spacing-9) 1fr minmax(0, $uds-size-spacing-9) minmax(0, auto);
+    grid-template-rows: minmax(0, auto) minmax(0, $uds-size-spacing-9) 1fr minmax(
+        0,
+        $uds-size-spacing-9
+      ) minmax(0, auto);
 
     .content-wrapper {
-      padding:$uds-size-spacing-6;
+      padding: $uds-size-spacing-6;
     }
   }
 }
